[package]
name = "app_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
base58 = "0.2.0"
bytes = "1.5.0"
digest = "0.10.7"
hex = "0.4.3"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
rust_decimal = { version = "1.32.0", features = ["db-postgres"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"]}
tokio-postgres = "0.7.10"

app_config = { path = "../app_config" }
