[package]
name = "tron-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = "4.4.0"
ctrlc = "3.4.1"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = "0.11.22"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = "1.33.0"
tokio-postgres = "0.7.10"

app_config = { path = "../app_config" }
app_state = { path = "../app_state" }
